--- a/style.css
+++ b/style.css
@@ -1,199 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"');
 
 body {
-    font-family: 'Open Sans', sans-serif;
+  font-family: "Press Start 2P", cursive;
+  background-image: url("https://res.cloudinary.com/dbrsienbw/image/upload/v1596816860/Background_d6tbtc.jpg");
+  text-align: center;
+  justify-content: space-evenly;
+  color: white;
+  background-size: contain;
+  font-size: 100%;
 }
 
-h1 {
-    font-size: 3em;
-    font-family: 'Poppins', sans-serif;
+ul,
+li {
+  list-style: none;
 }
 
-.button {
-    background-color: #FFE200;
-    border-radius: 2px;
-    width: 130px;
-    padding: 10px 15px;
-    text-align: center;
-    font-size: 0.8em;
-    background-color: #f50a5f;
-    color: white;
-    margin: 20px 10%;
+.nav ul {
+  display: flex;
+  cursor: pointer;
+  justify-content: space-around;
 }
 
-#nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    min-height: 60px;
-    background-color: #5f27cd;
-    font-size: 1.2em;
+.nav ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 150%;
+  padding: 20px 30px;
+  border-radius: 10px;
 }
 
-#nav li {
-    list-style: none;
-    margin: 0 20px;
+.nav ul li a:hover {
+  background-color: white;
+  color: black;
 }
 
-#nav li a {
-    text-decoration: none;
-    color: white;
-    font-size: 0.8em;
+.image-text {
+  display: flex;
+  flex-direction: column;
 }
 
-.flex-centered {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.info {
+  display: flex;
+}
+
+.round {
+  border-radius: 50%;
+  border: 5px solid orangered;
 }
 
 #home {
-    flex-wrap: wrap-reverse;
-    width: 100%;
-    margin: 40px auto;
+  display: flex;
+  color: black;
+  padding: 2%;
+  background-color: whitesmoke;
 }
 
-#home-text {
-    width: 50%;
-    min-width: 350px;
+#specs {
+  display: flex;
+  justify-content: space-around;
+  grid-gap: 5px;
 }
 
-#home-text>h1,
-#home-text>p {
-    width: 80%;
-    margin: 10px auto;
+.game-pad {
+  margin: 0px 10% 0 10%;
 }
 
-#home-image {
-    width: 50%;
+.ease {
+  margin: 0 47.3% 0 47.3%;
 }
 
-#home-image img {
-    /* object-fit: contain; */
-    max-width: 500px;
-    border-radius: 10px;
+.buyButton {
+  cursor: pointer;
 }
 
-#work,
-#hobbies,
-#contact {
-    flex-direction: column;
-    width: 100%;
-    text-align: center;
+.buyButton:hover {
+  color: black;
+  background-color: white;
+  padding: 20px 10px;
+  border-radius: 10px;
 }
 
-#work,
-#hobbies {
-    margin: 100px auto;
-}
-
-#work>p,
-#hobbies>p {
-    padding: 20px 400px;
-}
-
-.projects {
-    align-self: flex-start;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    flex-wrap: wrap;
-}
-
-.project {
-    width: 200px;
-    padding: 20px 0;
-    margin: 0 100px;
-}
-
-.project>* {
-    padding: 10px 0;
-}
-
-.project a {
-    text-decoration: none;
-    color: #F50A5F;
-    font-weight: 800;
-}
-
-.project img {
-    height: 200px;
-}
-
-.image-grid {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 20px auto;
-    padding: 0 4px;
-    width: 80%;
-}
-
-.column {
-    flex: 33%;
-    max-width: 33%;
-    padding: 0 4px;
-}
-
-.column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 100%;
-}
-
-/* Progression 3 - Make your project mobile responsive
-Instructions: Use @media Rulen  */
-
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-    .column {
-        flex: 50%;
-        max-width: 50%;
-    }
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-    .column {
-        flex: 100%;
-        max-width: 100%;
-    }
-}
-
-#contact {
-    background-color: #5f27cd;
-    color: white;
-    margin-top: 20px;
-}
-
-#achievements {
-    display: flex;
-    flex-wrap: wrap;
-    height: 400px;
-}
-
-#achievements h1 {
-    flex: 50%;
-    color: white;
-    background-image: linear-gradient(to bottom right, #5F27CD, #F50A5F)
-}
-
-#achievements ul {
-    flex: 50%;
-    flex-direction: column;
-}
-
-#achievements ul li {
-    width: 80%;
-}
-
-#contact * {
-    margin: 10px auto;
+.buyButton {
+  padding: 20px 10px;
+  border-radius: 10px;
+  height: auto;
+  width: fit-content;
+  margin: 0 47% 0 47%;
 }
